# service/system/api/docs/swagger/system.json
@@ -119,6 +119,28 @@
                 "accessToken": {
                   "type": "string"
                 },
+                "buttons": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "required": [
+                      "buttonId",
+                      "name",
+                      "code"
+                    ],
+                    "properties": {
+                      "buttonId": {
+                        "type": "string"
+                      },
+                      "code": {
+                        "type": "string"
+                      },
+                      "name": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                },
                 "menus": {
                   "type": "array",
                   "items": {
@@ -241,7 +263,7 @@
       }
     }
   },
-  "x-date": "2026-04-29 19:41:02",
+  "x-date": "2026-04-29 23:53:28",
   "x-description": "This is a goctl generated swagger file.",
   "x-github": "https://github.com/zeromicro/go-zero",
   "x-go-zero-doc": "https://go-zero.dev/",
